examples/apps/fruits-v2/kubernetes/frontend/frontend-banana.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fruitslib-bfrnt
  namespace: fruits-library
spec:
  selector:
    matchLabels:
      app: fruitslib-bfrnt
  replicas: 2
  template:
    metadata:
      labels:
        app: fruitslib-bfrnt
        role: frontend
        tenant: banana
    spec:
      # hostname: fruitslib-bfrnt-web     
      containers:
      - image: ipirva/nginx-php
        imagePullPolicy: IfNotPresent
        name: fruitslib-bfrnt
        ports:
          - containerPort: 8080
            name: frnt-web-port
            protocol: TCP
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          subPath: fruitslib-frnt
          name: frnt-web
      volumes:
      - name: frnt-web
        persistentVolumeClaim:
          claimName: pvc-fruitslib-bfrnt
---
# Service
kind: Service
apiVersion: v1
metadata:
  name: fruitslib-bfrnt
  namespace: fruits-library
  labels:
    tenant: banana
spec:
  selector:
    app: fruitslib-bfrnt
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
---
# Ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fruitslib-bfrnt
  namespace: fruits-library
  labels:
    tenant: banana
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/app-root: /banana
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-pass-headers: "x-deployment-name"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Deployment-Name: banana";
    nginx.ingress.kubernetes.io/main-snippet: |
      proxy_set_header X-Original-URI $request_uri;
spec:
  tls:
  - hosts:
    - myfruitslibrary.com
    secretName: fruitslib-frnt-tls
  rules:
  - host: myfruitslibrary.com
    http:
      paths:
        - path: /banana/(.*)
          backend:
            serviceName: fruitslib-bfrnt
            servicePort: 8080
